--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Explain Git with D3</title>
+  <!-- Local version also available for offline use -->
   <script data-main="js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.4/require.min.js"></script>
+  <!-- Local version also available for offline use -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
+  <!-- Local version also available for offline use -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/1140/2.0/1140.css">
   <link rel="stylesheet" href="css/explaingit.css">
 </head>
