Comment HTML sections. Install XTerm.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </p>
       </div>
     </div>
+
+    <!-- BASIC COMMANDS -->
     <div class="row command-list">
       <div class="twocol">
         <h4>Basic Commands</h3>
@@ -67,6 +69,8 @@
         <a id="open-tag" class="openswitch" href="#tag">git tag</a>
       </div>
     </div>
+
+    <!-- TERMINAL & PLAYGROUND -->
     <div class="row concept-area">
       <div id="ExplainGitCommit-Container" class="twelvecol concept-container">
         <p>
@@ -275,12 +279,16 @@
         <div class="playground-container"></div>
       </div>
     </div>
+
+    <!-- EXAMPLES -->
     <div class="row">
       <div class="twelvecol">
         <h2>Specific Examples</h2>
         <p>Below I have created some specific real-world scenarios that I feel are quite common and useful.</p>
       </div>
     </div>
+
+    <!-- EXAMPLES LIST -->
     <div class="row example-list">
       <div class="tencol">
         <a id="open-clean" class="openswitch" href="#clean">Restore Local Branch to State on Origin Server</a>
@@ -293,6 +301,7 @@
         <a id="open-zen" class="openswitch" href="#zen">Zen Mode</a>
       </div>
     </div>
+    
   </div>
 
   <div id="ExplainGitZen-Container" style="display:none">
