--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- Local version also available for offline use -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/1140/2.0/1140.css">
   <link rel="stylesheet" href="css/explaingit.css">
+  <!-- XTerm -->
+  <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
+  <!-- <script src="node_modules/@xterm/xterm/lib/xterm.js" type="module"></script> -->
 </head>
 
 <body>
@@ -301,7 +304,7 @@
         <a id="open-zen" class="openswitch" href="#zen">Zen Mode</a>
       </div>
     </div>
-    
+
   </div>
 
   <div id="ExplainGitZen-Container" style="display:none">
