--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Explain Git with D3</title>
+
   <!-- Local version also available for offline use -->
-  <script data-main="js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.4/require.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
+  <script src="./js/historyview.js"></script>
+
+  <!-- Local version also available for offline use -->
+  <!-- <script data-main="js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.4/require.min.js"></script> -->
+
   <!-- Local version also available for offline use -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
+
   <!-- Local version also available for offline use -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/1140/2.0/1140.css">
   <link rel="stylesheet" href="css/explaingit.css">
@@ -328,8 +335,7 @@
     </marker>
   </svg>
 
-  <script src="./js/index.js">
-  </script>
+  <!-- <script src="./js/index.js"></script> -->
 </body>
 
 </html>
