--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
   <script src="./js/historyview.js"></script>
   <script src="./js/controlbox.js"></script>
+  <script src="./js/explaingit.js"></script>
 
   <!-- Local version also available for offline use -->
   <!-- <script data-main="js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.4/require.min.js"></script> -->
