Got rid of require.js

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
     </marker>
   </svg>
 
-  <!-- <script src="./js/index.js"></script> -->
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
