--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
         <div class="playground-container"></div>
       </div>
 
+      <!-- <div id="playground-container" class="playground-container"></div> -->
+
     </div>
 
     <!-- EXAMPLES -->
