--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="css/explaingit.css">
   <!-- XTerm -->
   <link rel="stylesheet" href="node_modules/@xterm/xterm/css/xterm.css" />
-  <script src="node_modules/@xterm/xterm/lib/xterm.js" type="module"></script>
+  <script src="node_modules/@xterm/xterm/lib/xterm.js"></script>
 </head>
 
 <body>
@@ -35,10 +35,6 @@
     <div class="row intro">
       <div class="twelvecol">
         <h1>Visualizing Git Concepts with D3</h1>
-        <p>
-          This website is designed to help you understand some basic git concepts visually.
-          This is my first attempt at using both SVG and D3. I hope it is helpful to you.
-        </p>
         <p>
           Adding/staging your files for commit will not be covered by this site. In all sandbox playgrounds
           on this site, just pretend that you always have files staged and ready to commit at all times.
@@ -110,6 +106,10 @@
     <!-- TERMINAL & PLAYGROUND -->
     <div class="row concept-area"></div>
 
+  </div>
+
+  <div class="row">
+    <div id="terminal"></div>
   </div>
 
   <div id="ExplainGitZen-Container" style="display:none">
