--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Local version also available for offline use -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.12/d3.min.js"></script>
+  <script src="./js/levenshtein.js"></script>
   <script src="./js/historyview.js"></script>
   <script src="./js/controlbox.js"></script>
   <script src="./js/explaingit.js"></script>
