Renamed master to main

--- a/memtest.html
+++ b/memtest.html
@@ -25,7 +25,7 @@ require(['explaingit'], function (explainGit) {
             name: 'Memtest',
             height: 250,
             commitData: [
-                {id: '98ca9b5', tags: ['origin/master', 'master']}
+                {id: '98ca9b5', tags: ['origin/main', 'main']}
             ]
         });
     };
